# TIN

./: .cproject  .gitignore  .project  Design_tin.eap  HowToSetUp  README.md  TIN_project.lua  TIN_project.lua~  TODO List  help.txt  lua_tutorial.txt  plik  setup.sh  test.txt
QtDynamicLibs/: libbuildlib.so.1  libbuildlib.so.1.0  libbuildlib.so.1.0.0
code/: CMakeLists.txt
code/Client/: AliasCommunicationListener.cpp  AliasCommunicationListener.h  CMakeLists.txt  ClientApplication.cpp  ClientApplication.h  ClientView.cpp  ClientView.h  CommandParser.cpp  CommandParser.h  Commands.cpp  Commands.h  DaemonCommunication.cpp  DaemonCommunication.h  ServerConnection.cpp  ServerConnection.h  ServerConnectionListener.cpp  ServerConnectionListener.h  syntax.txt  syntax.txt~
code/Client/include/: AliasCommunicationListener.h  Argument.h  ClientApplication.h  ClientView.h  ClientView.h.orig  CommandParser.h  Commands.h  DaemonCommunication.h  ServerConnection.h  ServerConnectionListener.h
code/Client/src/: AliasCommunicationListener.cpp  Argument.cpp  ClientApplication.cpp  ClientApplication.cpp.orig  ClientView.cpp  ClientView.cpp.orig  CommandParser.cpp  Commands.cpp  DaemonCommunication.cpp  ServerConnection.cpp  ServerConnectionListener.cpp  main.cpp
code/Daemon/: CMakeLists.txt  ClientCommunication.cpp  ClientCommunication.h  DaemonApplication.cpp  DaemonApplication.h  DaemonThread.cpp  DaemonThread.h  File.cpp  File.h  FileReciver.cpp  FileReciver.h  FileSender.cpp  FileSender.h  FileTransferListener.cpp  FileTransferListener.h  ServerConnection.cpp  ServerConnection.h  ServerConnectionListener.cpp  ServerConnectionListener.h
code/Daemon/include/: ClientCommunication.h  DaemonApplication.h  DaemonConfiguration.h  DaemonThread.h  DaemonThreadListener.h  File.h  FileReciver.h  FileSender.h  FileTransferListener.h  ServerConnection.h  ServerConnectionListener.h
code/Daemon/src/: ClientCommunication.cpp  DaemonApplication.cpp  DaemonConfiguration.cpp  DaemonThread.cpp  DaemonThread.cpp.orig  DaemonThreadListener.cpp  File.cpp  FileReciver.cpp  FileSender.cpp  FileTransferListener.cpp  ServerConnection.cpp  ServerConnectionListener.cpp  main.cpp
code/Server/: Alias.cpp  Alias.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ClientConnectionListener.cpp  ClientConnectionListener.h  ClientServerConnectionListener.cpp  ClientServerConnectionListener.h  DaemonConnection.cpp  DaemonConnection.h  DaemonConnectionListener.cpp  DaemonConnectionListener.h  FileTransferListener.cpp  FileTransferListener.h  FileTransferServer.cpp  FileTransferServer.h  MainServer.cpp  MainServer.h
code/Server/include/: Alias.h  ClientConnection.h  ClientConnectionListener.h  ClientServerConnectionListener.h  DaemonConnection.h  DaemonConnectionListener.h  FileTransferListener.h  FileTransferServer.h  MainServer.h  TcpServer.h  UnknownConnection.h  UnknownConnectionListener.h
code/Server/src/: Alias.cpp  Alias.cpp.orig  ClientConnection.cpp  ClientConnectionListener.cpp  ClientServerConnectionListener.cpp  DaemonConnection.cpp  DaemonConnectionListener.cpp  FileTransferListener.cpp  FileTransferServer.cpp  MainServer.cpp  TcpServer.cpp  UnknownConnection.cpp  UnknownConnectionListener.cpp  main.cpp
code/Utilities/: AliasFileList.cpp  AliasFileList.h  CMakeLists.txt  FileLocation.cpp  FileLocation.h  Message.cpp  Message.h  Password.cpp  Password.h
code/Utilities/include/: AliasFileList.h  AliasTree.h  CommunicationProtocol.h  ConfigFileName.h  FileLocation.h  FileLocation.h.orig  FileTree.h  Identifier.h  Identify.h  InterprocessName.h  Message.h  Password.h  Password.h.orig
code/Utilities/src/: AliasFileList.cpp  AliasTree.cpp  CommunicationProtocol.cpp  ConfigFileName.cpp  FileLocation.cpp  FileLocation.cpp.orig  FileTree.cpp  Identifier.cpp  Identify.cpp  InterprocessName.cpp  Message.cpp  Password.cpp  Password.cpp.orig
code/doxygen/: CMakeLists.txt  Doxyfile.in
design/: Design_tin.eap  Dokumentacja koncowa.docx  Dokumentacja wstępna.docx  Protokół komunikacyjny.docx  decisions.txt
